--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,17 @@ body, html {
     background-color: #f8f9fa;
     border-right: 1px solid #ddd;
 }
+.icons {
+    display: flex;
+    justify-content: space-between; 
+    width: 100%; 
+    margin-right: 15px;
+}
+
+.icons i {
+    font-size: 1.2rem;
+    color: #A491D2; 
+}
 
 .user-status {
     display: flex;
@@ -37,8 +48,8 @@ body, html {
     align-items: center;
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #A491D2; /* Soap */
-    background-color: #ffffff; /* White for better visibility */
+    border: 1px solid #A491D2; 
+    background-color: #ffffff;
     transition: background-color 0.3s, border-color 0.3s;
     margin-bottom: 10px;
 }
@@ -65,9 +76,9 @@ body, html {
     height: auto;
 }
 .intro-text {
-    font-size: 1.1rem; /* Ajusta el tamaño del texto según sea necesario */
+    font-size: 1.1rem; 
 }
 
 .intro-text strong {
-    font-weight: bold; /* Hace que "Nuevo chat" esté en negrita */
+    font-weight: bold; 
 }
